@@ -71,9 +71,6 @@
 
 /* ==========================
 CPI STYLE */
-section.section-news-cpi{
-    padding: 0 5em;
-}
 section.section-news-cpi a{
     color: black;
     text-decoration: none;
@@ -106,7 +103,27 @@ p{
     font-size: 1.4em;
     line-height: 1.6;
 }
+aside>*{
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    background-color: #fff;
 
+}
+aside .aside-nav h3{
+    font-size: 1.5em;
+}
+aside .aside-nav ul li{
+    margin-top: 0.5em;
+}
+aside .aside-nav ul li a{
+    color: #0B3954;
+    text-decoration: none;
+    font-family: 'Cabin', sans-serif;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+aside .aside-nav ul li:hover{
+    border-bottom: 3px solid #0B3954;
+}
 /* ==========================
 MAP STYLE */
 .aside-map .card-numbers{
