@@ -68,42 +68,6 @@
         usa em nosso site.</p>
     <p>Esta política é efetiva a partir de <strong>Novembro</strong>/<strong>2021</strong>.</p>
 
-    <!-- ================
-    cards-content -->
-    <aside class="cards-content row">
-        <div class="card col-sm-12 col-md-6 col-lg-3">
-            <h2>Sobre Nós</h2>
-            <p class="text-lora">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero facilis ipsa autem animi
-                earum quod vel illum facere voluptatem mollitia. Maxime nemo nihil dolores earum possimus pariatur,
-                atque itaque voluptatibus!</p>
-            <a href="#" class="btn btn-primary">Saiba mais</a>
-        </div>
-        <div class="card col-sm-12 col-md-6 col-lg-3">
-            <h2>Contato</h2>
-            <p class="text-lora">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eum excepturi
-                necessitatibus eos ducimus sequi culpa unde odit incidunt adipisci alias perspiciatis saepe voluptas
-                consequatur natus quis sit, impedit veniam.</p>
-            <a href="#" class="btn btn-primary">Entrar em contato</a>
-        </div>
-        <div class="card col-sm-12 col-lg-3">
-            <h3>Receba as ultimas noticías</h3>
-            <p class="text-lora">Lorem ipsum dolor sit amet</p>
-
-            <form action="#" method="post">
-                <div class="mb-3">
-                    <label for="nameInput" class="form-label">Nome</label>
-                    <input type="email" class="form-control" id="nameInput" placeholder="Nome do usuário">
-                </div>
-                <div class="mb-3">
-                    <label for="emailInput" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
-                </div>
-                <button type="button" class="btn btn-primary">Enviar</button>
-            </form>
-        </div>
-    </aside>
-    <!-- cards-content
-    ================ -->
 </main>
 
 
