@@ -1,4 +1,10 @@
 cpi-covid/brasil-supera-eua.png
 Brasil supera Estados Unidos em taxa de vacinados
-O Brasil superou os Estados Unidos na taxa de população completamente vacinada contra a Covid-19. De acordo com dados do DataSUS (departamento de informática que centraliza informações do Sistema Único de Saúde), o país tem 59,9% de pessoas completamente imunizadas, enquanto os EUA, segundo informações do CDC (Centro de Controle e Prevenção de Doença), chegaram a 58,8% de americanos vacinados. 
-Em números absolutos o Brasil aplicou menos doses do que os EUA. A diferença se dá porque a população do país estrangeiro é maior.
+Já são 59,9% de brasileiros totalmente imunizados contra o coronavírus ante 58,8% de americanos com proteção total.
+O Brasil superou os Estados Unidos na taxa de população completamente vacinada contra a Covid-19. De acordo com dados do DataSUS (departamento de informática que centraliza informações do Sistema Único de Saúde), o país tem 59,9% de pessoas completamente imunizadas, enquanto os EUA, segundo informações do CDC (Centro de Controle e Prevenção de Doença), chegaram a 58,8% de americanos vacinados.
+A vacinação começou mais cedo nos Estados Unidos. A primeira vacina aplicada foi em 14 de dezembro de 2020, quando uma enfermeira de um hospital do Queens, em Nova York, recebeu a aplicação da primeira dose da Pfizer. Enquanto isso, no Brasil, a primeira dose contra a covid-19 foi aplicada em 17 de janeiro, pouco mais de um mês após os estadunidenses, quando a funcionária do Hospital Emílio Ribas Mônica Calazans foi vacinada com a CoronaVac, produzida no país pela farmacêutiva Sinovac em parceria com o Instituto Butantan.
+Para o médico intensivista do Hospital de Brasília, Rodrigo Biondi, o atraso da vacinação aconteceu pela demora na compra dos imunizantes, e foi compensado pela estrutura efetiva do Sistema Único de Saúde (SUS). "Nós precisávamos das vacinas, assim que compramos ela, o SUS já tinha uma grande capacidade de realizar campanhas de vacinação", diz.
+Biondi atribui o sucesso da vacinação no Brasil à capacidade que o Programa Nacional de Imunização (PNI) tem para organizar campanhas de vacinação. "A gente chegou nessa posição em decorrência de uma estrutura do PNI formada há décadas no Brasil. O nosso PNI sempre foi referência mundial para vacinação.” 
+Outro fator essencial para a rapidez no avanço da cobertura vacinal foi a aderência da população brasileira às campanhas. O médico intensivista explica que os brasileiros têm um costume cultural de se vacinar. “Apesar das fake news e teorias de conspiração, muito rapidamente as pessoas foram percebendo que as vacinas são seguras e benéficas. Isso com certeza tem relação com a cultura do próprio brasileiro, que não cultiva um pensamento antivacina", explica Rodrigo Biondi.
+Por outro lado, os estadunidenses têm uma forte cultura de negacionismo contra os resultados da vacina. Nos EUA, a campanha de vacinação tem dificuldade de avançar em regiões e públicos específicos. "Os Estados Unidos tem outra particularidade, porque existem bolsões antivacina. Alguns estados têm maior predomínio de anti vacinas, principalmente os que são majoritariamente republicanos”, diz Rodrigo Biondi, que ainda destaca o perigo dessa situação. “Assim o vírus continua circulando naquele ambiente, enquanto que em outros bairros e cidades com maior adesão à vacina, o vírus é praticamente extinto".
+Ele diz que ainda é cedo para relaxar as medidas de segurança contra o coronavírus, mas salienta que a taxa de 59,75% da população completamente vacinada é importante para diminuir a circulação do vírus. “A gente sabe que para infecções virais respiratórias, quando a gente alcança uma taxa de respiração na casa dos 60/70%, temos uma drástica redução na taxa de transmissão”, afirmou.
